--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "typing-extensions>=4.12.2",
     "uvicorn>=0.34.0",
     "fastmcp>=2.14.1",
+    "python-dotenv>=1.0.1",
 ]
 
 [project.urls]
