--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,5 @@ sse-starlette>=2.2.1
 starlette>=0.46.1
 typing-extensions>=4.12.2
 uvicorn>=0.34.0
-fastmcp>=2.3.4
-
+fastmcp>=2.14.1
+python-dotenv>=1.0.1
